Converting the color attribute causes undo to fail #97408

Closed
opened 2022-04-17 15:57:17 +02:00 by San Rin · 11 comments

System Information
version: 3.2.0 Alpha, branch: master, commit date: 2022-04-16 01:49, hash: 2b191cd2b4, type: Release
platform: 'Windows-10-10.0.19041-SP0'

Short description of error
When execute undo after converting a color attribute, the converted attribute is retained, and the original attribute is recreated
kAnimation.gif
Exact steps for others to reproduce the error

  • Use paint tool to paint a sphere.
  • Convert color attribute create by point tool to another type

Executing undo twice (first undo will not respond) and see the converted property does not disappear and the pre-converted property reappears at the same time.

**System Information** version: 3.2.0 Alpha, branch: master, commit date: 2022-04-16 01:49, hash: 2b191cd2b41b, type: Release platform: 'Windows-10-10.0.19041-SP0' **Short description of error** When execute undo after converting a color attribute, the converted attribute is retained, and the original attribute is recreated ![kAnimation.gif](https://archive.blender.org/developer/F13006390/kAnimation.gif) **Exact steps for others to reproduce the error** - Use paint tool to paint a sphere. - Convert color attribute create by point tool to another type # Executing undo twice (first undo will not respond) and see the converted property does not disappear and the pre-converted property reappears at the same time.
Author

Added subscriber: @Rin-San

Added subscriber: @Rin-San
San Rin changed title from Converting the attribute causes undo to fail to Converting the color attribute causes undo to fail 2022-04-17 15:58:51 +02:00
Author

Following the steps above, Undo will create a new property named "color" like this
saaa.gif

Following the steps above, Undo will create a new property named "color" like this ![saaa.gif](https://archive.blender.org/developer/F13007221/saaa.gif)
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Bug in new feature so I'll raise the priority.
Feel free to revert it if this is not a top priority issue.

Bug in new feature so I'll raise the priority. Feel free to revert it if this is not a top priority issue.
wanna0077 commented 2022-04-28 16:25:50 +02:00 (Migrated from localhost:3001)

Added subscriber: @wanna0077

Added subscriber: @wanna0077
Joseph Eagar was assigned by Julien Kaspar 2022-05-12 10:21:40 +02:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

It should be noted that this is a problem specifically with sculpt-undo. When I convert the layer and undo while I'm in object mode, it works fine.
There is a comment /* Memfile undo killed the layer; re-create it. */ which begs the question why undo killed the layer in the first place.

It should be noted that this is a problem specifically with sculpt-undo. When I convert the layer and undo while I'm in object mode, it works fine. There is a comment `/* Memfile undo killed the layer; re-create it. */` which begs the question why undo killed the layer in the first place.
Member

This is a problem with incremental undo systems versus absolute ones. OPTYPE_UNDO assumes absolute undo steps, so it executes the push after the operator has run; the already-existing undo step prior to the operator is assumed to have all the info needed to undo that operator. Which obviously is impossible with incremental systems like sculpt undo.

We can probably solve this by detecting if an incremental undo system is active, and if so push an extra undo push before running the operator.

This is a problem with incremental undo systems versus absolute ones. OPTYPE_UNDO assumes absolute undo steps, so it executes the push after the operator has run; the already-existing undo step prior to the operator is assumed to have all the info needed to undo that operator. Which obviously is impossible with incremental systems like sculpt undo. We can probably solve this by detecting if an incremental undo system is active, and if so push an extra undo push before running the operator.

This issue was referenced by 75162ab8c2

This issue was referenced by 75162ab8c23937fce64e7b2674cc706a008ded96
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97408
No description provided.